--- a/DiscoveryMonitor/ConfigurationWindow.xaml
+++ b/DiscoveryMonitor/ConfigurationWindow.xaml
@@ -1,9 +1,13 @@
 ﻿<UserControl x:Class="EddiDiscoveryMonitor.ConfigurationWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:System="clr-namespace:System;assembly=mscorlib"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:eddi="clr-namespace:EddiDataDefinitions;assembly=EddiDataDefinitions"
              xmlns:local="clr-namespace:EddiDiscoveryMonitor"
+             xmlns:resx="clr-namespace:EddiDiscoveryMonitor.Properties"
+             xmlns:utility="clr-namespace:Utilities;assembly=Utilities"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" d:MinWidth="650">
 
@@ -29,16 +33,16 @@
                     <Setter Property="HorizontalAlignment" Value="Left"/>
                 </Style>
             </TabControl.Resources>
-            <TabItem Header="General">
+            <TabItem Header="{x:Static resx:Tab_General.Tab_Title}">
                 <local:Tab_General/>
             </TabItem>
-            <TabItem Header="Exobiology">
+            <TabItem Header="{x:Static resx:Tab_Exobiology.Tab_Title}">
                 <local:Tab_Exobiology/>
             </TabItem>
-            <TabItem Header="Nebulae">
+            <TabItem Header="{x:Static resx:Tab_Nebulae.Tab_Title}">
                 <local:Tab_Nebulae/>
             </TabItem>
-            <TabItem Header="Guardian Sites">
+            <TabItem Header="{x:Static resx:Tab_Guardian.Tab_Title}">
                 <local:Tab_Guardian/>
             </TabItem>
         </TabControl>
