--- a/DiscoveryMonitor/Tab_Guardian.xaml
+++ b/DiscoveryMonitor/Tab_Guardian.xaml
@@ -4,6 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EddiDiscoveryMonitor"
+             xmlns:eddi="clr-namespace:Eddi;assembly=EDDI"
+             xmlns:resx="clr-namespace:EddiDiscoveryMonitor.Properties"
+             xmlns:eddiDataDefinitions="clr-namespace:EddiDataDefinitions;assembly=EddiDataDefinitions"
+             xmlns:sysglb="clr-namespace:System.Globalization;assembly=mscorlib"
              mc:Ignorable="d" 
          d:DesignHeight="450" d:DesignWidth="800" d:MinWidth="650">
 
@@ -43,7 +47,7 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <Button Grid.Row="0" Grid.ColumnSpan="2" Content="Get Neareset Guardian Sites" VerticalAlignment="Stretch" Margin="0,0,0,0" Click="onClick_GetGuardianSite"/>
+                <Button Grid.Row="0" Grid.ColumnSpan="2" Content="{x:Static resx:Tab_Guardian.Button_GetNearest}" VerticalAlignment="Stretch" Margin="0,0,0,0" Click="onClick_GetGuardianSite"/>
 
                 <Grid Grid.Row="2" Grid.ColumnSpan="2">
                     <Grid.ColumnDefinitions>
@@ -60,41 +64,26 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <Label Grid.RowSpan="2" Grid.Column="0" Content="Filter" VerticalAlignment="Center" Padding="5,0,20,0"/>
-                    <RadioButton Grid.RowSpan="2" Grid.Row="0" Grid.Column="1" x:Name="radioGuardianfilter_All" Content="All" IsChecked="True" GroupName="GuardianSiteFilter" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0,10,0"/>
+                    <Label Grid.RowSpan="2" Grid.Column="0" Content="{x:Static resx:Tab_Guardian.Filter}" VerticalAlignment="Center" Padding="5,0,20,0"/>
+                    <RadioButton Grid.RowSpan="2" Grid.Row="0" Grid.Column="1" x:Name="radioGuardianfilter_All" Content="{x:Static resx:Tab_Guardian.Filter_All}" IsChecked="True" GroupName="GuardianSiteFilter" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0,10,0"/>
 
-                    <RadioButton Grid.Row="0" Grid.Column="2" x:Name="radioGuardianfilter_Beacons" Content="Beacons" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
-                    <RadioButton Grid.Row="0" Grid.Column="3" x:Name="radioGuardianfilter_Ruins" Content="Ruins" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
-                    <RadioButton Grid.Row="0" Grid.Column="4" x:Name="radioGuardianfilter_Structures" Content="Structures" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
+                    <RadioButton Grid.Row="0" Grid.Column="2" x:Name="radioGuardianfilter_Beacons" Content="{x:Static resx:Tab_Guardian.Filter_Beacons}" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
+                    <RadioButton Grid.Row="0" Grid.Column="3" x:Name="radioGuardianfilter_Ruins" Content="{x:Static resx:Tab_Guardian.Filter_Ruins}" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
+                    <RadioButton Grid.Row="0" Grid.Column="4" x:Name="radioGuardianfilter_Structures" Content="{x:Static resx:Tab_Guardian.Filter_Structures}" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
 
-                    <RadioButton Grid.Row="1" Grid.Column="2" x:Name="radioGuardianfilter_Weapon" Content="Weapon BP" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
-                    <RadioButton Grid.Row="1" Grid.Column="3" x:Name="radioGuardianfilter_Module" Content="Module BP" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
-                    <RadioButton Grid.Row="1" Grid.Column="4" x:Name="radioGuardianfilter_Vessel" Content="Vessel BP" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
+                    <RadioButton Grid.Row="1" Grid.Column="2" x:Name="radioGuardianfilter_Weapon" Content="{x:Static resx:Tab_Guardian.Filter_WeaponBP}" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
+                    <RadioButton Grid.Row="1" Grid.Column="3" x:Name="radioGuardianfilter_Module" Content="{x:Static resx:Tab_Guardian.Filter_ModuleBP}" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
+                    <RadioButton Grid.Row="1" Grid.Column="4" x:Name="radioGuardianfilter_Vessel" Content="{x:Static resx:Tab_Guardian.Filter_VesselBP}" GroupName="GuardianSiteFilter" VerticalAlignment="Center" Padding="5,0,10,0"/>
 
-                    <Label Grid.Row="2" Grid.Column="0" Content="Max Distance" VerticalAlignment="Center" Padding="5,0,20,0"/>
+                    <Label Grid.Row="2" Grid.Column="0" Content="{x:Static resx:Tab_Guardian.MaxDistance}" VerticalAlignment="Center" Padding="5,0,20,0"/>
                     <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Text="5000" x:Name="guardianMaxDistance" PreviewTextInput="EnsureValidInteger"/>
                     <Label Grid.Row="2" Grid.Column="4" Content="LY" VerticalAlignment="Center" Padding="5,0,20,0"/>
 
-                    <Label Grid.Row="3" Grid.Column="0" Content="Max Results" VerticalAlignment="Center" Padding="5,0,20,0"/>
+                    <Label Grid.Row="3" Grid.Column="0" Content="{x:Static resx:Tab_Guardian.MaxResults}" VerticalAlignment="Center" Padding="5,0,20,0"/>
                     <TextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Text="50" x:Name="guardianMaxCount" PreviewTextInput="EnsureValidInteger"/>
                     <Label Grid.Row="3" Grid.Column="4" Content="" VerticalAlignment="Center" Padding="5,0,20,0"/>
                 </Grid>
-
-                <!--<Label Grid.Row="4" Grid.Column="0" Content="Type" Padding="0,0,10,0" />
-                    <TextBox Grid.Row="4" Grid.Column="1" x:Name="guardianSite_Type" Text="" IsReadOnly="True" />
-
-                    <Label Grid.Row="5" Grid.Column="0" Content="System" Padding="0,0,10,0" />
-                    <TextBox Grid.Row="5" Grid.Column="1" x:Name="guardianSite_SystemName" Text="" IsReadOnly="True" />
-
-                    <Label Grid.Row="6" Grid.Column="0" Content="Body" Padding="0,0,10,0" />
-                    <TextBox Grid.Row="6" Grid.Column="1" x:Name="guardianSite_Body" Text="" IsReadOnly="True" />
-
-                    <Label Grid.Row="7" Grid.Column="0" Content="Blueprint" Padding="0,0,10,0" />
-                    <TextBox Grid.Row="7" Grid.Column="1" x:Name="guardianSite_Blueprint" Text="" IsReadOnly="True" />
-
-                    <Label Grid.Row="8" Grid.Column="0" Content="Distance" Padding="0,0,10,0" />
-                    <TextBox Grid.Row="8" Grid.Column="1" x:Name="guardianSite_Distance" Text="" IsReadOnly="True"/>-->
-                </Grid>
+            </Grid>
         </Grid>
 
         <Grid Grid.Column="0" Grid.Row="1">
@@ -106,7 +95,7 @@
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Label Grid.Row="0" Grid.ColumnSpan="2" Content="Guardian Sites" Padding="0,0,10,0" HorizontalContentAlignment="Center"/>
+            <Label Grid.Row="0" Grid.ColumnSpan="2" Content="{x:Static resx:Tab_Guardian.GuardianSites}" Padding="0,0,10,0" HorizontalContentAlignment="Center"/>
             <DataGrid Grid.Row="1" Grid.ColumnSpan="2" AutoGenerateColumns="False" x:Name="datagrid_GuardianData" ItemsSource="{Binding}" CanUserAddRows="false" CanUserDeleteRows="False" HeadersVisibility="All" SelectionUnit="Cell">
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
@@ -119,12 +108,11 @@
                     </Style>
                 </DataGrid.CellStyle>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Type" IsReadOnly="True" Width="*" Binding="{Binding type}"/>
-                    <DataGridTextColumn Header="Distance" IsReadOnly="True" Width="*" Binding="{Binding distance}"/>
-                    <DataGridTextColumn Header="System" IsReadOnly="True" Width="3*" Binding="{Binding systemName}"/>
-                    <DataGridTextColumn Header="Body" IsReadOnly="True" Width="*" Binding="{Binding body}"/>
-                    <DataGridTextColumn Header="Blueprint" IsReadOnly="True" Width="*" Binding="{Binding blueprintType}"/>
-                    <!--<DataGridTextColumn Header="Visited" IsReadOnly="True" Width="Auto" Binding="{Binding visited}"/>-->
+                    <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_Type}" IsReadOnly="True" Width="*" Binding="{Binding localizedType}"/>
+                    <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_Distance}" IsReadOnly="True" Width="*" Binding="{Binding distance}"/>
+                    <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_System}" IsReadOnly="True" Width="3*" Binding="{Binding systemName}"/>
+                    <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_Body}" IsReadOnly="True" Width="*" Binding="{Binding body}"/>
+                    <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_Blueprint}" IsReadOnly="True" Width="*" Binding="{Binding localizedblueprint}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
