Move Min/Max Values, Monitor for CarrierJump, Cleanup and Fixes, Prep for Rebase Moved genus min/max predicted values from the genus class to the organic class and reworked code to put values there during predictions. Added monitoring to update discovery monitor GUI on carrier jump. Removed some old code and simplified some. Preparing for Rebase to apply CarrierJump fixes from master.

--- a/DiscoveryMonitor/Tab_Exobiology.xaml
+++ b/DiscoveryMonitor/Tab_Exobiology.xaml
@@ -124,7 +124,7 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <DataGrid Grid.Column="1" Grid.Row="1" AutoGenerateColumns="False" x:Name="datagrid_bioData" SelectionMode="Single" CanUserSortColumns="False" SelectionChanged="datagrid_SelectionChanged" ItemsSource="{Binding}" CanUserAddRows="false" CanUserDeleteRows="False" HeadersVisibility="All" SelectionUnit="FullRow" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+            <DataGrid Grid.Column="1" Grid.Row="1" AutoGenerateColumns="False" x:Name="datagrid_bioData" LoadingRow="datagrid_LoadingRow" SelectionMode="Single" CanUserSortColumns="False" SelectionChanged="datagrid_SelectionChanged" ItemsSource="{Binding}" CanUserAddRows="false" CanUserDeleteRows="False" HeadersVisibility="All" SelectionUnit="FullRow" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Auto">
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
                         <Setter Property="HorizontalContentAlignment" Value="Center" />
