--- a/DiscoveryMonitor/Tab_Guardian.xaml
+++ b/DiscoveryMonitor/Tab_Guardian.xaml
@@ -11,6 +11,8 @@
              mc:Ignorable="d" 
          d:DesignHeight="450" d:DesignWidth="800" d:MinWidth="650">
 
+    
+    
     <Grid HorizontalAlignment="Stretch" Background="#FFE5E5E5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -111,6 +113,17 @@
                     <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_Type}" IsReadOnly="True" Width="*" Binding="{Binding localizedType}"/>
                     <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_Distance}" IsReadOnly="True" Width="*" Binding="{Binding distance}"/>
                     <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_System}" IsReadOnly="True" Width="3*" Binding="{Binding systemName}"/>
+                    <DataGridTemplateColumn MinWidth="31">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button MinWidth="30" Click="copySystemNameToClipboard"  HorizontalAlignment="Center" ToolTip="{x:Static resx:Tab_Guardian.copy_system_button_tooltip}" Tag="{Binding systemName}">
+                                    <StackPanel>
+                                        <Image Source="Images/Copy.png" Height="16"/>
+                                    </StackPanel>
+                                </Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                     <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_Body}" IsReadOnly="True" Width="*" Binding="{Binding body}"/>
                     <DataGridTextColumn Header="{x:Static resx:Tab_Guardian.GuardianSites_Blueprint}" IsReadOnly="True" Width="*" Binding="{Binding localizedBlueprint}"/>
                 </DataGrid.Columns>
