--- a/DiscoveryMonitor/Tab_Nebulae.xaml
+++ b/DiscoveryMonitor/Tab_Nebulae.xaml
@@ -11,7 +11,13 @@
              mc:Ignorable="d" 
          d:DesignHeight="450" d:DesignWidth="800" d:MinWidth="650">
     <UserControl.Resources>
-        <BooleanToVisibilityConverter x:Key="b2v" />
+        <ContextMenu x:Key="ContextMenu">
+            <MenuItem Command="Copy">
+                <MenuItem.Icon>
+                    <Image Source="Images/Copy.png" />
+                </MenuItem.Icon>
+            </MenuItem>
+        </ContextMenu>
     </UserControl.Resources>
 
     <Grid HorizontalAlignment="Stretch" Background="#FFE5E5E5">
@@ -113,6 +119,18 @@
                     <DataGridTextColumn Header="{x:Static resx:Tab_Nebulae.NearestNebulae_Distance}" IsReadOnly="True" Width="Auto" Binding="{Binding distance, StringFormat={}0 LY}"/>
                     <DataGridTextColumn Header="{x:Static resx:Tab_Nebulae.NearestNebulae_Name}" IsReadOnly="True" Width="*" Binding="{Binding name}"/>
                     <DataGridTextColumn Header="{x:Static resx:Tab_Nebulae.NearestNebulae_Reference}" IsReadOnly="True" Width="*" Binding="{Binding referenceBody}"/>
+                    <DataGridTemplateColumn MinWidth="31">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <!--<Button Click="copySystemNameToClipboard" MinWidth="30" HorizontalAlignment="Center" ToolTip="{x:Static resx:NavigationMonitor.copy_system_button_tooltip}">-->
+                                <Button MinWidth="30" Click="copySystemNameToClipboard"  HorizontalAlignment="Center" ToolTip="{x:Static resx:Tab_Nebulae.copy_system_button_tooltip}" Tag="{Binding referenceBody}">
+                                    <StackPanel>
+                                        <Image Source="Images/Copy.png" Height="16"/>
+                                    </StackPanel>
+                                </Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                     <DataGridTextColumn Header="{x:Static resx:Tab_Nebulae.NearestNebulae_Diameter}" IsReadOnly="True" Width="Auto" Binding="{Binding diameter, StringFormat={}0 LY}"/>
                     <DataGridTextColumn Header="{x:Static resx:Tab_Nebulae.NearestNebulae_Visited}" IsReadOnly="True" Width="Auto" Binding="{Binding visited}">
                         <DataGridTextColumn.ElementStyle>
